--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.1"
     },
     "require-dev": {
+        "crowdstar/reflection": "~1.0.0",
         "phpunit/phpunit": "~7.0",
         "squizlabs/php_codesniffer": ">=2.0"
     },
