--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ before_install:
   - composer update -n
 
 script:
+  - set -e
   - ./vendor/bin/phpcs -v --standard=PSR12 src tests/unit
   - ./vendor/bin/phpunit
