--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0 || ~8.0",
-        "swoole/ide-helper": "@dev",
-        "squizlabs/php_codesniffer": ">=2.0"
+        "swoole/ide-helper": "@dev"
     },
     "suggest": {
         "ext-swoole": "Allow to do exponential backoff in non-blocking mode in Swoole"
