--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.0 || ~8.0",
+        "phpunit/phpunit": "~7.0 || ~8.0 || ~9.0",
         "swoole/ide-helper": "@dev"
     },
     "suggest": {
