--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,17 +4,17 @@ on: [ push, pull_request, workflow_dispatch ]
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: true
       matrix:
-        php: ["7.1", "7.2", "7.3", "7.4", "8.0", "8.1"]
+        php: ["7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
 
     name: Tests Under PHP ${{ matrix.php }}
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -24,21 +24,21 @@ jobs:
           coverage: none
 
       - name: Install dependencies
-        uses: nick-invision/retry@v1
+        uses: nick-invision/retry@v2
         with:
           timeout_minutes: 5
           max_attempts: 5
-          command: composer install --prefer-dist --no-interaction --no-progress
+          command: composer update --prefer-stable --prefer-dist --no-interaction --no-progress
 
       - name: Run Unit Tests
         run: ./vendor/bin/phpunit
 
       - name: Run Syntax Checks
         run: |
+          set -e
+
           if [ ${{ matrix.php }} == '7.3' ] ; then
             docker run --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:1.60.0-php7.3        phplint src
-          elif [ ${{ matrix.php }} == '8.1' ] ; then
-            echo "Skip syntax check for now since Docker image jakzal/phpqa:php8.1 does not exist."
           else
             docker run --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:php${{ matrix.php }} phplint src
           fi
