--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=7.0",
+        "crowdstar/reflection": "~1.0.0",
+        "phpunit/phpunit": "~7.0 || ~8.0 || ~9.0",
         "swoole/ide-helper": "~5.0"
     },
     "suggest": {
