--- a/.github/workflows/coding_style_checks.yml
+++ b/.github/workflows/coding_style_checks.yml
@@ -1,4 +1,4 @@
-name: Coding Style Checks
+name: Code Quality checks
 
 on: [ push, pull_request, workflow_dispatch ]
 
@@ -12,3 +12,6 @@ jobs:
 
       - name: Run Coding Style Checks
         run: docker run --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:php8.2 phpcs -v --standard=PSR2 src tests/unit
+
+      - name: Run Static Analysis
+        run: docker run --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:php8.2 phpstan analyse --no-progress --memory-limit 2G -l 9 src
