--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,13 +8,13 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: ["7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
+        php: ["7.1", "7.2", "7.3", "7.4", "8.0", "8.1", "8.2", "8.3"]
 
     name: Tests Under PHP ${{ matrix.php }}
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
