--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,7 @@ jobs:
           set -e
 
           if [ ${{ matrix.php }} == '7.3' ] ; then
-            docker run --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:1.60.0-php7.3        phplint src
+            docker run -q --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:1.60.0-php7.3        phplint examples src
           else
-            docker run --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:php${{ matrix.php }} phplint src
+            docker run -q --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:php${{ matrix.php }} phplint examples src
           fi
