--- a/.github/workflows/code_quality_checks.yml
+++ b/.github/workflows/code_quality_checks.yml
@@ -28,4 +28,4 @@ jobs:
         run: ./vendor/bin/phpstan analyse --no-progress --memory-limit 2G
 
       - name: Run Coding Style Checks
-        run: docker run -q --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:php8.2 php-cs-fixer fix --dry-run
+        run: docker run -q --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:php8.2-alpine php-cs-fixer fix --dry-run
