--- a/.github/workflows/code_quality_checks.yml
+++ b/.github/workflows/code_quality_checks.yml
@@ -22,10 +22,10 @@ jobs:
         with:
           timeout_minutes: 5
           max_attempts: 5
-          command: composer require phpstan/phpstan=~1.11.0 -n -q --no-progress
+          command: composer require phpstan/phpstan=~2.0 -n -q --no-progress
 
       - name: Run Static Analysis
         run: ./vendor/bin/phpstan analyse --no-progress --memory-limit 2G
 
       - name: Run Coding Style Checks
-        run: docker run -q --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:php8.2-alpine php-cs-fixer fix --dry-run
+        run: docker run -q --rm -v "$(pwd):/project" -w /project -i jakzal/phpqa:php8.3-alpine php-cs-fixer fix -q --dry-run
